# raytracer

./: Cargo.toml
src/: app.rs  main.rs
src/math/: mod.rs  ray.rs  vec3.rs
src/rendering/: camera.rs  framebuffer.rs  material.rs  mod.rs  rgb.rs  transform.rs  viewport.rs
src/rendering/backends/: file.rs  mod.rs  window.rs
src/scene/: camera.rs  entity.rs  hittable.rs  mod.rs  transform.rs
src/scene/primitives/: mod.rs  sphere.rs
