[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"
description = "a basic raytracer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
log = "0.4.14"
simplelog = "0.10.0"
nameof = "1.2.1"
clap = "~2.33"
nalgebra = "0.27.1"
minifb = "0.19.3"
